--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lucide-react": "^0.546.0",
     "next": "15.3.4",
     "next-themes": "^0.4.6",
+    "phosphor-react": "^1.4.1",
     "postcss": "^8.5.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
