--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.14",
     "viem": "^2.31.6",
-    "wagmi": "^2.16.3"
+    "wagmi": "^2.16.3",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
