--- a/.example.env
+++ b/.example.env
@@ -1,1 +1,6 @@
 NEXT_PUBLIC_URL=
+NEXT_PUBLIC_PROJECT_NAME=
+
+NEXT_PUBLIC_EVENT_BOOK_ADDRESS=
+NEXT_PUBLIC_CUSTOM_RPC_URL=
+NEXT_PUBLIC_CUSTOM_CHAIN_ID=
