--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "@base-org/account-ui": "^1.0.1",
     "@coinbase/onchainkit": "latest",
     "@farcaster/miniapp-sdk": "^0.1.8",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.2.6",
     "@tailwindcss/postcss": "^4.1.14",
     "@tanstack/react-query": "^5.81.5",
     "class-variance-authority": "^0.7.1",
