--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "jsqr": "^1.4.0",
     "lucide-react": "^0.546.0",
     "next": "15.3.4",
     "next-themes": "^0.4.6",
