--- a/.example.env
+++ b/.example.env
@@ -4,3 +4,4 @@ NEXT_PUBLIC_PROJECT_NAME=
 NEXT_PUBLIC_EVENT_BOOK_ADDRESS=
 NEXT_PUBLIC_CUSTOM_RPC_URL=
 NEXT_PUBLIC_CUSTOM_CHAIN_ID=
+PINATA_API_KEY=
