--- a/contracts/foundry.toml
+++ b/contracts/foundry.toml
@@ -5,3 +5,6 @@ libs = ["lib"]
 remappings = ["@openzeppelin/=../node_modules/@openzeppelin/"]
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
 allow_paths = ["../node_modules"]
+via_ir = true
+optimizer = true
+optimizer_runs = 200
