feat: add easy switch between testnet and mainnet

--- a/.example.env
+++ b/.example.env
@@ -1,8 +1,9 @@
 NEXT_PUBLIC_URL=
 NEXT_PUBLIC_PROJECT_NAME=
-
+NEXT_PUBLIC_CHAIN_ENV=
 NEXT_PUBLIC_EVENT_BOOK_ADDRESS=
-NEXT_PUBLIC_CUSTOM_RPC_URL=
-NEXT_PUBLIC_CUSTOM_CHAIN_ID=
+NEXT_PUBLIC_TICKET_CONTRACT_ADDRESS=
+
+ALCHEMY_API_KEY=
 PINATA_API_KEY=
 NEYNAR_API_KEY=
