--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@base-org/account": "^2.4.0",
     "@base-org/account-ui": "^1.0.1",
     "@coinbase/onchainkit": "latest",
+    "@farcaster/miniapp-node": "^0.1.11",
     "@farcaster/miniapp-sdk": "^0.1.8",
     "@openzeppelin/contracts": "^5.4.0",
     "@radix-ui/react-dialog": "^1.1.15",
@@ -22,6 +23,7 @@
     "@radix-ui/react-switch": "^1.2.6",
     "@tailwindcss/postcss": "^4.1.14",
     "@tanstack/react-query": "^5.81.5",
+    "@upstash/redis": "^1.35.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
